--- a/_config.yml
+++ b/_config.yml
@@ -98,4 +98,6 @@ theme: huno
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type: ''
+  type: git
+  repo: https://github.com/Kiyosora/Kiyosora.github.io.git
+  branch: master
